--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "concurrently": "^8.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
+    "react-type-animation": "^3.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -19,7 +23,6 @@
     "eject": "react-scripts eject",
     "EduNovaServer": "cd EduNovaServer && npm run dev",
     "dev": "concurrently -n \"client,EduNovaServer\" -c \"bgBlue,bgYellow\" \"npm start\" \"npm run EduNovaServer\""
-
   },
   "eslintConfig": {
     "extends": [
