--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.18.0",
     "tailwindcss": "^3.4.1"
   }
 }
